hopefully fix readability | add favicon

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html><head>
   <title>RSL</title>
   <link rel=stylesheet href=css/style.css>
+  <link rel=icon href=favicon.svg>
   <script>
   function notFunctional(event){
     event.preventDefault();
     alert('This is just for show - nothing works yet.');
   }
   </script>
-  <meta name=description content="A basic 2017 Roblox revival">
-  <meta name=keywords content="roblox, 2017, revival">
+  <meta name=description content="A basic 2013 Roblox revival. Site is a work in progress.">
+  <meta name=keywords content="roblox, 2013, revival">
   <meta name=author content=SKCro>
   <meta name=viewport content="width=device-width,initial-scale=1">
 </head><body>
