--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <nav class=top-bar-section aria-label="Section 1 - contains buttons for Home and Games sections">
     <button id=home onclick=notFunctional(event);><img src=images/logo.svg alt="RSL Home">RSL Home</button>
     <button id=games onclick=notFunctional(event);>Games</button>
+    <button id=build onclick=notFunctional(event);>Build</button>
   </nav>
   <nav class=top-bar-section aria-label="Section 2 - contains account details or login button">
     <span id=topUsername>Not Logged In</span>
-    <button id=settings onclick=notFunctional(event);>Settings</button>
+    <button id=settings onclick=notFunctional(event);>Log in/Sign up</button>
   </nav>
 </header>
 <main id=mainContent>
@@ -30,7 +31,7 @@
       <h2>Log in</h2>
       <input type=username placeholder=Username>
       <input type=password placeholder=Password>
-      <input type=submit value="Log in!">
+      <input type=submit value="Sign in!">
     </section>
     <section class=separator aria-hidden=true><h2>OR</h2></section>
     <section class=signup aria-label="Signup button">
