forgot to push the logos

--- a/index.html
+++ b/index.html
@@ -41,4 +41,4 @@
 </main>
 <footer id=footer>
   <p>Revival run by <strong>Xeriff</strong>, site designed and coded by <strong><a href=https://github.com/SKCro>SKCro</a></strong>. This site is <em>not</em> affiliated with Roblox.</p>
-</footer></body></html>
+</footer><script src=js/wtv-hd.js></script></body></html>
